--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/testDB?serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=root
+# Database
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Shanghai
+spring.datasource.username=test
+spring.datasource.password=test
 
+# JPA
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
@@ -10,3 +12,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.html
+
+#thymeleaf
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.cache=false
